--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,11 @@ services:
     depends_on:
       - db
     environment:
-      DATABASE_URL: mysql+pymysql://zluqet_user:${MYSQL_PASSWORD}@db/zluqetdb
+      MYSQL_USER: zluqet_user
+      MYSQL_PASSWORD: securepassword
+      MYSQL_HOST: db
+      MYSQL_DATABASE: zluqetdb
+      DATABASE_URL: mysql+pymysql://zluqet_user:securepassword@db/zluqetdb
 
   db:
     image: mysql:latest
@@ -15,7 +19,7 @@ services:
     environment:
       MYSQL_DATABASE: zluqetdb
       MYSQL_USER: zluqet_user
-      MYSQL_PASSWORD: securepassword  # Change this for production
+      MYSQL_PASSWORD: securepassword
     ports:
       - "3306:3306"
     volumes:
