--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -27,9 +27,7 @@ jobs:
         with:
           context: ./
           file: ./Dockerfile
-          build-args: |
-            COMMIT_HASH=${{ env.hash }}
           push: true
           tags: |
-            ghcr.io/person0z/zluqet:latest
+            ghcr.io/zluqe/zluqet:latest
   
