--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
     "express": "^5.1.0",
     "highlight.js": "^11.11.1",
     "lru-cache": "^11.1.0",
+    "mariadb": "^3.4.2",
     "mysql2": "^3.14.1",
     "pg": "^8.15.6",
+    "pg-hstore": "^2.3.4",
     "semver": "^7.7.1",
     "sequelize": "^6.37.7",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "tedious": "^18.6.1"
   }
 }
