--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.8"
+
 services:
   db:
     image: mariadb:latest
@@ -14,28 +16,24 @@ services:
       - "3307:3306"
 
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: ghcr.io/zluqe/zluqet:latest
     container_name: zluqet-app
     restart: unless-stopped
     depends_on:
       - db
-    volumes:
-      - .:/app
     ports:
       - "5000:5000"
     environment:
-      PORT:                 5000
-      DB_TYPE:              mariadb
-      DB_HOST:              db
-      DB_PORT:              3306
-      DB_NAME:              zluqet
-      DB_USER:              user
-      DB_PASS:              password
-      REQUESTS_PER_MINUTE:  5
-      CACHE_MAX:            1000
-      MAX_LENGTH:           25000
+      PORT:                 "5000"
+      DB_TYPE:              "mariadb"
+      DB_HOST:              "db"
+      DB_PORT:              "3306"
+      DB_NAME:              "zluqet"
+      DB_USER:              "user"
+      DB_PASS:              "password"
+      REQUESTS_PER_MINUTE:  "5"
+      CACHE_MAX:            "1000"
+      MAX_LENGTH:           "25000"
 
 volumes:
   db_data:
